# Policymaker-AI

./: .replit  app.py  app_init.py  celery_worker.py  cli_commands.py  config.py  main.py  manage.py  models.py  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  run_command.py  tailwind.config.js  wsgi.py
Old_SQL_backups/: backup_20240929_231014.sql  schema_backup_20240929_231908.sql
Policies_till_SQL/: Liverpool_FC.json  Manchester United.json
migrations/versions/: add_reset_password_001.py  initial_migration.py  initial_setup.py
static/css/: output.css
templates/: 404.html  admin.html  confirmation.html  forgot_password.html  generera_policy.html  generera_policy_inskickat.html  index.html  klubboversikt.html  policy.html  policy_pdf.html  reset_password.html  valj_klubb.html  view_logs.html
